--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,44 @@
 .App {
-  text-align: center;
+  
 }
 
 .title{
   width: 100%;
   font-size: 22px;
+  text-align: center;
   margin: 0;
+}
+
+.news-container{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  padding: 2rem;
+  gap: 1rem;
+}
+
+.news-container div{
+  box-shadow: 0 0 10px #ddd;
+  padding: 1rem;
+  border-radius: 10px;
+}
+
+.news-container h3{
+  font-weight: 500;
+  height: 80px;
+  color: #0a9396;
+}
+
+.news-container img{
+  max-width: 100%;
+  height: 250px;
+  border-radius: 10px;
+}
+
+.news-container p{
+  line-height: 28px;
+  height: 180px;
+}
+
+.news-container small{
+  font-weight: 700;
 }
